--- a/Frontends/CourseApp.Web/Views/_ViewImports.cshtml
+++ b/Frontends/CourseApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CourseApp.Web
 @using CourseApp.Web.Models
+@using CourseApp.Web.Models.Catalogs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
