--- a/Frontends/CourseApp.Web/Views/_ViewImports.cshtml
+++ b/Frontends/CourseApp.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using CourseApp.Web
 @using CourseApp.Web.Models
 @using CourseApp.Web.Models.Catalogs
+@using CourseApp.Web.Models.Baskets
+@using CourseApp.Web.Models.Orders
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
